initial Python script and more USB info

--- a/mk5-2846.md
+++ b/mk5-2846.md
@@ -25,12 +25,137 @@ bootloader mode - hold bottom left key
 
 
 
-
 Vial app works (had to enable unsigned apps)
 has configured layers
 
 
-Need to explore the extension / hub part
-- how to write to screen
-- how to read dial
+Using hidtest from hidapi (this device only)
 
+```text
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291580
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    0
+  Usage (page): 0x6 (0x1)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291580
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    0
+  Usage (page): 0x2 (0x1)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291580
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    0
+  Usage (page): 0x1 (0x1)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291578
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    2
+  Usage (page): 0xe (0x1)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291578
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    2
+  Usage (page): 0x21 (0xd)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291578
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    2
+  Usage (page): 0x80 (0x1)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291578
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    2
+  Usage (page): 0x1 (0xc)
+
+Device Found
+  type: fefd 0003
+  path: DevSrvsID:4295291576
+  serial_number: vial:f64c2b3c
+  Manufacturer: vial:f64c2b3c
+  Product:      0005
+  Release:      2
+  Interface:    1
+  Usage (page): 0x61 (0xff60)
+```
+
+Using [hidapitester](https://github.com/todbot/hidapitester) to poke at the device...
+
+Screen / dial is this:
+
+```text
+FEFD/0003: vial:f64c2b3c - 0005
+  vendorId:      0xFEFD
+  productId:     0x0003
+  usagePage:     0xFF60
+  usage:         0x0061
+  serial_number: vial:f64c2b3c
+  interface:     1
+  path: IOService:/AppleARMPE/arm-io/AppleT600xIO/usb-drd1@2280000/AppleT6000USBXHCI@01000000/usb-drd1-port-hs@01100000/USB2.0 Hub@01100000/AppleUSB20Hub@01100000/AppleUSB20HubPort@01110000/0005@01110000/IOUSBHostInterface@1/AppleUserUSBHostHIDDevice
+```
+
+usagePage hex FF60 -> dec 65376
+usage     hex 0061 -> dec 97
+
+`./hidapitester --vidpid FEFD:0003 --open --read-input-forever`
+
+Turn dial anticlockwise
+
+```text
+Reading 64-byte input report 0, 250 msec timeout...read 32 bytes:
+ FD 04 01 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+ 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+```
+
+clockwise
+
+```text
+Reading 64-byte input report 0, 250 msec timeout...read 32 bytes:
+ FD 04 02 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+ 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+```
+
+Write "Hello " to screen row 2
+
+```text
+$ hidapitester --vidpid FEFD:0003 --open --usagePage ff60 --usage 0061 --send-output 0x00,0xfd,0x01,0x01,0x48,0x65,0x6c,0x6c,0x6f,0x20
+Opening device, vid/pid: 0xFEFD/0x0003
+Writing output report of 64-bytes...wrote 64 bytes:
+ 00 FD 01 01 48 65 6C 6C 6F 20 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+ 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
+Closing device
+```
