More hardware data (CH552) and improved README

--- a/mk5-2846.md
+++ b/mk5-2846.md
@@ -18,13 +18,6 @@ https://ezykeys.com/
   Extra Operating Current (mA):	0
 ```
 
-Possible QMK?
-
-
-bootloader mode - hold bottom left key
-
-
-
 Vial app works (had to enable unsigned apps)
 has configured layers
 
@@ -159,3 +152,30 @@ Writing output report of 64-bytes...wrote 64 bytes:
  00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
 Closing device
 ```
+
+Back to the keypad.
+
+bootloader mode - hold bottom left key when plugging in
+
+macOS sees
+
+product 0x55e0 vendor 0x4348
+--> it's a WCH chip
+
+Using [chflasher](https://github.com/hexeguitar/CH55x_python_flasher)
+
+```text
+$ python ./chflasher.py --detect                                                                         git:(master|)
+Found CH552
+Flash size: 16 blocks, 16384 bytes.
+Reserved for application: 14 blocks, 14336 bytes.
+Bootloader version: 2.40
+```
+
+--> it's a [CH552 chip](https://w.electrodragon.com/w/CH55X_HDK)
+
+- supports USB
+- supports USB-C master/slave detection
+- supports USB HID
+- does NOT support QMK
+- ... so how is it implementing Vial?
