--- a/mk5-2846.md
+++ b/mk5-2846.md
@@ -159,8 +159,9 @@ bootloader mode - hold bottom left key when plugging in
 
 macOS sees
 
-product 0x55e0 vendor 0x4348
+USB product 0x55e0 vendor 0x4348
 --> it's a WCH chip
+(not that you can tell from [the hardware](img/mcu.jpeg) as the chip ID is not visible)
 
 Using [chflasher](https://github.com/hexeguitar/CH55x_python_flasher)
 
