Windows sw info, more Vial info

--- a/mk5-2846.md
+++ b/mk5-2846.md
@@ -18,8 +18,30 @@ https://ezykeys.com/
   Extra Operating Current (mA):	0
 ```
 
-Vial app works (had to enable unsigned apps)
+[Vial app](https://github.com/vial-kb/vial-gui) works (had to enable unsigned apps)
+
 has configured layers
+
+Using the via.rocks web app -> "About 0005"
+
+```text
+Manufacturer:
+Product: 0005
+VID: FEFD
+PID: 0003
+Device: /webhid
+VIA protocol: 9
+Vial protocol: 2
+Vial keyboard ID: A78B9BEA5ABE77EC
+Macro entries: 16
+Macro memory: 314 bytes
+Macro delays: yes
+Complex (2-byte) macro keycodes: unsupported - Vial firmware too old
+Tap Dance entries: unsupported - Vial firmware too old
+Combo entries: unsupported - Vial firmware too old
+Key Override entries: unsupported - Vial firmware too old
+QMK Settings: unsupported - Vial firmware too old
+```
 
 
 Using hidtest from hidapi (this device only)
