more on the CH55x

--- a/mk5-2846.md
+++ b/mk5-2846.md
@@ -188,7 +188,7 @@ USB product 0x55e0 vendor 0x4348
 Using [chflasher](https://github.com/hexeguitar/CH55x_python_flasher)
 
 ```text
-$ python ./chflasher.py --detect                                                                         git:(master|)
+$ python ./chflasher.py --detect
 Found CH552
 Flash size: 16 blocks, 16384 bytes.
 Reserved for application: 14 blocks, 14336 bytes.
@@ -202,3 +202,14 @@ Bootloader version: 2.40
 - supports USB HID
 - does NOT support QMK
 - ... so how is it implementing Vial?
+
+Using [ch55xtool](https://github.com/MarsTechHAN/ch552tool)
+
+```text
+$ python -m ch55xtool -p
+Found CH552 with SubId:17
+BTVER:02.40
+UID:26-48-93-54-00-00-00-00
+Chip configs   0xFFFFFFFF   0x00000003   0xD77B72FF
+Finalize communication. Done.
+```
